--- a/CustomerAPI/CustomerAPI/CustomerAPI.csproj
+++ b/CustomerAPI/CustomerAPI/CustomerAPI.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\JOBSEARCH\AlintaEnergy\CustomerAPI\CustomerAPI\CustomerAPI\CustomerAPI.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
